# vlm-pipeline

./: .gitignore  LICENSE  README.md  eval_lora.sh  local_setup.sh  main.py  pyproject.toml  setup_gpu_env.sh  train_vlm.sh  use_mock.sh
configs/: flickr8k_captioning.yaml
outputs/: baseline_predictions.jsonl  lora_predictions.jsonl  metrics_lora.json
outputs/debug/: flickr8k_batch_inspect.txt
scripts/: debug_flickr8k_batch.py  download_flickr8k.py  final_eval_viz.py  package_artifacts.sh  test_qwen3vl_caption.py
src/data/: flickr8k.py
src/eval/: baseline_eval.py  eval_trained.py
src/models/: lora_setup.py  mock_vl_model.py  qwen_vl_loader.py
src/training/: trainer.py
src/utils/: paths.py  seed.py  wandb_utils.py
